--- a/src/css/modules/module-index/index.less
+++ b/src/css/modules/module-index/index.less
@@ -25,11 +25,36 @@
 
 .html-img-small {
   display: block;
-  width: 100px;
-  margin: 10px auto;
+  width: 235px;
+  height: 235px;
+  margin: 0 auto;
+  border-radius: 50%;
   object-fit: cover;
   &.play {
-    animation: playing 10s linear infinite;
+    animation: playing 30s linear infinite;
+  }
+}
+
+.time {
+  position: relative;
+  height: 30px;
+  line-height: 30px;
+  margin: 25px auto 0;
+  text-align: center;
+  color: #00a346;
+  text-shadow: 2px 2px 10px;
+  animation: flipInX 1.2s both;
+  &:after {
+    position: absolute;
+    z-index: -1;
+    top: 3px;
+    right: 17px;
+    content: "";
+    display: block;
+    width: 25px;
+    height: 24px;
+    border-radius: 5px;
+    background-color: rgba(238, 238, 238, .95);
   }
 }
 
@@ -76,5 +101,38 @@
   }
   to {
     transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes flipInX {
+  from {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 90deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+    opacity: 0;
+  }
+
+  40% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -20deg);
+    -webkit-animation-timing-function: ease-in;
+    animation-timing-function: ease-in;
+  }
+
+  60% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, 10deg);
+    opacity: 1;
+  }
+
+  80% {
+    -webkit-transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+    transform: perspective(400px) rotate3d(1, 0, 0, -5deg);
+  }
+
+  to {
+    -webkit-transform: perspective(400px);
+    transform: perspective(400px);
   }
 }
