--- a/src/views/index.html
+++ b/src/views/index.html
@@ -14,10 +14,10 @@
         <p>首页</p>
       </header>
       <section class="content">
-        <div class="test-01">I have a dream</div>
+        <!-- <div class="test-01">I have a dream</div> -->
         <!-- 测试小于1000Byte的img,自动转换base64. -->
-        <img id="music_switch" class="html-img-small" src="../assets/img/menu_icon_04.png" alt="">
-        
+        <img id="music_switch" class="html-img-small" src="../assets/img/music.jpg" alt="music">
+        <div id="time_odd" class="time"></div>
         <!-- 
           1. 在html中引入的资源,如果直接在页面引入,需要通过html-loader来处理; 
           2. 也可以不直接在页面引入,例如这里的music,可以在js中require,再用js写入src,webpack打包时可以处理. 
