add postcss-sprites plugin test

--- a/src/css/modules/module-about/about.less
+++ b/src/css/modules/module-about/about.less
@@ -1,8 +1,8 @@
 .content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // align-content: center;
 }
 
 .test-02 {
@@ -17,12 +17,33 @@
 }
 
 .test-img {
-  width: 100%;
+  margin: 20px auto 0;
+}
+
+.img-01 {
+  width: 320px;
   height: 200px;
-  object-fit: cover;
-  margin-top: 20px;
-  background: url(../../../assets/img/banner_01.jpg) no-repeat center center;  
-  background-size: cover;
+  background: url(../../../assets/img/sprite_banner_02.jpg) no-repeat;
+  background-size: contain;
+}
+
+.img-02 {
+  width: 200px;
+  height: 150px;
+  background: url(../../../assets/img/sprite_haha.gif) no-repeat;
+  background-size: contain;
+}
+
+.img-03 {
+  width: 180px;
+  height: 100px;
+  background: url(../../../assets/img/sprite_index_pic_01.jpg) no-repeat;
+}
+
+.img-04 {
+  width: 150px;
+  height: 75px;
+  background: url(../../../assets/img/sprite_menu_icon_01.png) no-repeat;
 }
 
 .fool {
