--- a/src/views/about.html
+++ b/src/views/about.html
@@ -14,10 +14,13 @@
     </header>
     <section class="content">
       <div id="test_02" class="test-02"></div>
-      <!-- 测试大背景图处理 -->
-      <!-- <div class="test-img"></div> -->
       <!-- 测试大img处理 -->
       <img class="fool" src="../assets/img/fool.gif" alt="">
+      <!-- 测试大背景图处理,postcss-sprites -->
+      <div class="test-img img-01"></div>
+      <div class="test-img img-02"></div>
+      <div class="test-img img-03"></div>
+      <div class="test-img img-04"></div>
     </section>
   </div>
 </body>
